added signed media urls
