# apps/api/openapi.json
@@ -29,6 +29,46 @@
         }
       }
     },
+    "/media/{token}": {
+      "get": {
+        "tags": [
+          "sessions"
+        ],
+        "summary": "Get Media File",
+        "operationId": "get_media_file_media__token__get",
+        "parameters": [
+          {
+            "name": "token",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "title": "Token"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successful Response",
+            "content": {
+              "application/json": {
+                "schema": {}
+              }
+            }
+          },
+          "422": {
+            "description": "Validation Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/HTTPValidationError"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/auth/signup": {
       "post": {
         "tags": [
@@ -3290,6 +3330,30 @@
             "maxLength": 100,
             "title": "Media Type",
             "default": "image/png"
+          },
+          "media_url": {
+            "anyOf": [
+              {
+                "type": "string",
+                "maxLength": 4000
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Media Url"
+          },
+          "annotated_media_url": {
+            "anyOf": [
+              {
+                "type": "string",
+                "maxLength": 4000
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Annotated Media Url"
           },
           "annotations": {
             "items": {
